Chore: Update template

--- a/resources/template/src/index.html
+++ b/resources/template/src/index.html
@@ -17,8 +17,8 @@
 </body>
 
 <span id="title">GENUARY 2021 - JAN.X</span>
-<!-- <a id="previous" href="#">PREVIOUS</a>
-<a id="next" href="#">NEXT</a> -->
+<!-- <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.x/dist">PREVIOUS</a>
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.x/dist">NEXT</a> -->
 <div id="overlay"></div>
 
 </html>
